--- a/index.html
+++ b/index.html
@@ -3,26 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ChatSpheree</title>
-    <link rel="stylesheet" href="style.css">
+  <title>ChatSphere</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>💬 ChatSpheree</header>
-  <div class="status-bar">
-    <span id="user-status">Status: <b>Online</b></span> | 
-    <span id="online-count">User online: 1</span>
+  <div class="container">
+    <div class="header">
+      ChatSphere 💬
+      <div class="status">
+        🔵 <span id="onlineCount">0</span> pengguna online
+      </div>
+      <div class="toggle-mode" id="toggleMode">🌙</div>
+    </div>
+
+    <div class="chat-box" id="chatBox"></div>
+
+    <div class="username">
+      <input type="text" id="username" placeholder="Masukkan nama kamu..." />
+    </div>
+
+    <div class="input-area">
+      <input type="text" id="messageInput" placeholder="Ketik pesan..." />
+      <button id="sendBtn">Kirim</button>
+    </div>
   </div>
 
-  <div class="chat-container">
-    <div id="chat-box"></div>
-    <footer>
-      <input type="text" id="username" placeholder="Nama kamu" />
-      <input type="text" id="message" placeholder="Ketik pesan..." />
-      <button id="send">Kirim</button>
-      <button id="theme-toggle">🌙</button>
-    </footer>
-  </div>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
