--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ChatSphere</title>
+  <title>ChatSpheree</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <div class="header">
-      ChatSphere 💬
+      ChatSpheree 💬
       <div class="status">
         🔵 <span id="onlineCount">0</span> pengguna online
       </div>
